<resources>
    <string name="app_name">RetroRestfulWebServ</string>
    <string name="just_a_image">Just a Image</string>
    <string name="name">Enter Name</string>
    <string name="dept">Enter Department</string>
    <string name="about">Enter About</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="student">Student</string>
    <string name="add">Add</string>
    <string name="for_student_details">...for student details</string>
    <string name="get_started">Get Started</string>
</resources>
