<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true"
		tools:context=".activities.StudentDetailActivity"
		tools:ignore="MergeRootFrame">

	<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/app_bar"
			android:layout_width="match_parent"
			android:layout_height="@dimen/app_bar_height"
			android:fitsSystemWindows="true"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<com.google.android.material.appbar.CollapsingToolbarLayout
				android:id="@+id/collapsing_toolbar"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:fitsSystemWindows="true"
				app:contentScrim="?attr/colorPrimary"
				app:layout_scrollFlags="scroll|exitUntilCollapsed"
				app:toolbarId="@+id/toolbar">

			<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:scaleType="centerCrop"
					android:fitsSystemWindows="true"
					app:layout_collapseMode="parallax"
					android:src="@drawable/toolbar_background"
					android:contentDescription="@string/just_a_image"/>

			<androidx.appcompat.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					app:layout_collapseMode="pin"
					app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

		</com.google.android.material.appbar.CollapsingToolbarLayout>

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
			android:id="@+id/student_detail_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_margin="24dp">

			<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<EditText
						android:id="@+id/et_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/name"
						android:inputType="textPersonName"
						android:maxLines="1"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp">

				<EditText
						android:id="@+id/et_department"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/dept"
						android:imeOptions="actionUnspecified"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp">

				<EditText
						android:id="@+id/et_about"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/about"
						android:imeOptions="actionUnspecified"
						android:inputType="textMultiLine"
						android:maxLines="5"/>

			</com.google.android.material.textfield.TextInputLayout>

			<Button
					android:id="@+id/btn_add"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:backgroundTint="@color/colorPrimary"
					android:text="@string/add"
					android:textSize="16sp"
					android:textColor="@android:color/white" />

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
